<resources>
    <string name="app_name">Capston</string>

    <string name="hint_search">상호명을 입력하세요.</string>
    <string name="hint_insert_name">상호명을 입력하세요.</string>
    <string name="hint_insert_local">주소를 입력하세요.</string>
    <string name="hint_insert_phone">전화번호를 입력하세요.</string>
    <string name="hint_owner_say">주인말을 입력하세요.</string>
    <string name="hint_sDate">시작 시간</string>
    <string name="hint_eDate">종료 시간</string>
    <string name="hint_location">주소를 입력하세요.</string>


    <string name="add">등록</string>
    <string name="take_picture">사진 촬영</string>
    <string name="take_album">엘범에서 가져오기</string>
    <string name="fail_to_upload_picture">사진등록을 실패했습니다. \n잠시 후 다시 시도해주세요.</string>
    <string name="fail_to_upload">등록을 실패했습니다. \n잠시 후 다시 시도해주세요.</string>
    <string name="title_activity_maps">Map</string>

</resources>
