<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="30dp"
    android:paddingLeft="30dp"
    android:paddingBottom="30dp"
    android:paddingTop="30dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <EditText
        android:id="@+id/et_say"
        style="@style/EditTextBase"
        android:hint="@string/hint_owner_say"
        />
    <EditText
        android:id="@+id/et_sDate"
        style="@style/EditTextBase"
        android:hint="@string/hint_sDate"
        />
    <EditText
        android:id="@+id/et_eDate"
        style="@style/EditTextBase"
        android:hint="@string/hint_eDate"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="휴무일"
        android:textSize="20dp"
        android:textColor="#FFFF4E45"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ToggleButton
            android:id="@+id/btn_sun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOn="일"
            android:textOff="일"
            android:layout_marginRight="3dp"
            />
        <ToggleButton
            android:id="@+id/btn_mon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOn="월"
            android:textOff="월"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="3dp"
            />
        <ToggleButton
            android:id="@+id/btn_tue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOn="화"
            android:textOff="화"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="3dp"
            />
        <ToggleButton
            android:id="@+id/btn_wed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOn="수"
            android:textOff="수"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="3dp"
            />
        <ToggleButton
            android:id="@+id/btn_thu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOn="목"
            android:textOff="목"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="3dp"
            />
        <ToggleButton
            android:id="@+id/btn_fri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOn="금"
            android:textOff="금"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="3dp"
            />
        <ToggleButton
            android:id="@+id/btn_sat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOn="토"
            android:textOff="토"
            android:layout_marginLeft="3dp"
            />

    </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="20dp"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>